Fix horizontal scrolling on quiz pages

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,7 +21,7 @@ body {
 /* Start page before quiz begins */
 .start-page {
     width: 80%;
-    height: 60%;
+    max-height: 60%;
     margin-left: auto;
     margin-right: auto;
     border-radius: 5px;
@@ -213,5 +213,4 @@ body {
     .answer-buttons {
         max-width: fit-content;
     }
-
 }
